# opencv_samples

./: CMakeLists.txt  README.md  package.xml
src/: build  canny.cpp  canny.py  canny_center.cpp  info.cpp  magnitude.cpp  mat.cpp  open  run  show  sobel.cpp  sobel1.cpp  tempmatch.cpp
